inserted correct links under contact buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ input {
 }
 
 .price-table .p-head {
-	font-weight: 700;
+	font-weight: bold;
 	font-size: 14px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
