--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
 	font-weight: 300;
+	color:black;
 }
 
 
@@ -31,13 +32,17 @@ p {
 	font-size: 16px; 
 	line-height: 26px;
 	letter-spacing: 1px;
-	color: #666; 
+	color: black; 
 	margin-top: 10px; 
 }
 
 html,
 body {
 	height: 100%;
+}
+
+.container.ptb{
+	border-top:2px solid black;
 }
 
 .alignleft { float: left; }
@@ -189,12 +194,21 @@ input {
     background-size: cover;
 }
 
+.header{
+	position: fixed;
+}
+
 #h .logo {
 	top: 30px;
 	left: 45px;
 	font-size: 18px;
 	font-weight: 900;
 	position:absolute; 
+}
+
+#h .navbar{
+	top: 0px;
+	color: black;
 }
 
 #h .social {
@@ -204,17 +218,17 @@ input {
 	position: absolute;
 }
 
-#h .social i {
+#h i {
 	margin-left: 20px;
+	height:20px;
+	color:black;
+	font-size: 35px;
 }
 
-#h .social a {
-	color: white;
-}
 
 #h h1 {
 	font-weight: 700;
-	color: white;
+	color: black;
 	font-size: 40px;
 }
 
@@ -245,6 +259,14 @@ input {
     -o-background-size: cover;
     background-size: cover;
 }
+.img-responsive, .thumbnail > img, .thumbnail a > img, .carousel-inner > .item > img, .carousel-inner > .item > a > img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+	border-radius: 5px;
+	margin-left: 15%;
+}
+
 
 #sep h4 {
 	letter-spacing: 1px;
@@ -270,6 +292,10 @@ input {
 	/*border-bottom: 2px solid #ccc;*/
 }
 
+.screenshot{
+	border-top-radius: 10px;
+} 
+
 .price-table .p-body .features li {
 	color: #333333;
 	border-bottom: 2px solid #ccc;
@@ -291,6 +317,11 @@ input {
 	position: relative;
 	bottom: 10px;
 	font-weight: 700;
+}
+
+.ion-social-github{
+	font-size: 35px;
+	color: black;
 }
 
 ul {
