finished.. for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,10 @@ body {
 	width: 100%;
 }
 
+#rowie{
+	border-bottom:2px solid black;
+}
+
 #green tgr {
 	font-weight: 700;
 	letter-spacing: 1px;
@@ -272,7 +276,6 @@ input {
 	border-radius: 5px;
 	margin-left: 15%;
 }
-
 
 #sep h4 {
 	letter-spacing: 1px;
